--- a/ConsultorioFront/consultorio-upb/package.json
+++ b/ConsultorioFront/consultorio-upb/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "chart.js": "^4.4.1",
     "next": "14.0.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
